[package]
name = "ceph-usage"
version = "0.1.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
readme = "README.md"
license = "MIT"

[package.metadata.deb]
maintainer = "Chris Holcombe <xfactor973@gmail.com>"
depends = "$auto"
section = "utility"
assets = [
	["target/release/client", "usr/bin/", "755"],
	["target/release/ceph-usage", "usr/sbin/", "755"],
	["systemd/ceph-usage.service", "etc/systemd/system/", "644"],
	["systemd/environment", "etc/ceph-usage/environment", "664"],
	["README.md", "usr/share/doc/ceph-usage/README", "644"],
]

[workspace]

[dependencies]
api = { path = "api" }
ceph-rust = {git = "https://github.com/cholcombe973/ceph-rust"}
clap = "*"
client = { path = "client" }
log = "*"
protobuf = "*"
simplelog = "*"
zmq = "*"
